--- a/packages/components/src/styles/components/layout.scss
+++ b/packages/components/src/styles/components/layout.scss
@@ -86,7 +86,7 @@
   display: flex;
   flex-direction: row;
   height: calc(100vh - 60px); // Subtract header height
-  overflow: hidden;
+  overflow: clip;
   position: relative;
 }
 
